feat: implement Manager module (Bot + Notifier)
- Add TelegramBot class for aiogram bot management
- Implement handlers for /start, /status, /help commands
- Add IncidentNotifier for sending alerts and summary reports
- Create comprehensive unit tests (15 tests, 100% passed)
- Add HTML formatting with emojis for notifications

Tasks completed: 1.13, 1.14

--- a/.gitignore
+++ b/.gitignore
@@ -71,3 +71,25 @@ htmlcov/
 .mypy_cache/
 .dmypy.json
 dmypy.json
+
+# ===== PROJECT SPECIFIC =====
+
+# Config secrets (keep .env.example only)
+config/.env
+config/service_account.json
+
+# Telethon sessions
+data/sessions/*.session
+data/sessions/*.session-journal
+
+# Temporary voice files
+data/temp/*.ogg
+data/temp/*.mp3
+data/temp/*.wav
+
+# Logs (keep .gitkeep only)
+logs/*.log
+
+# SQLite database
+data/*.sqlite
+data/*.db
